--- a/WebApp/templates/Payment.html
+++ b/WebApp/templates/Payment.html
@@ -23,7 +23,7 @@
     </form>
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"
-    data-key="rzp_test_XrSOnebWyMTP0h"
+    data-key="your_key"
     data-amount="{{pay_str}}"
     data-currency="INR"
     data-order_id="{{payment}}"
